--- a/src/pages/Intro/intro.module.css
+++ b/src/pages/Intro/intro.module.css
@@ -1,4 +1,4 @@
-@import '../../pages/index.css';
+@import '../../pages/common.css';
 
 .container {
     gap: 1rem;
@@ -15,7 +15,7 @@
     border-radius: 2rem;
 
     max-height: 80dvh;
-    width: 90dvw;
+    /* width: 90dvw; */
     /* height: 80dvh; */
 
     padding: 4rem;
